2007-07-26 [paul]	2.10.0cvs66

	* src/gtk/prefswindow.c
		fix account prefs breakage
		thanks to Colin

2007-07-26 [paul]	2.10.0cvs65

	* configure.ac
		standardise ./configure --help messages

2007-07-26 [colin]	2.10.0cvs64

	* src/addressbook.c
	* src/editaddress.c
		Fix two vCard-related crashes

2007-07-25 [colin]	2.10.0cvs63

	* src/inc.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_receive.c
		Maemo: Add a better way to notify of
		new mails
	* src/mainwindow.c
	* src/statusbar.h
	* src/summaryview.c
	* src/toolbar.c
		Maemo: Various layout fixes
	* src/gtk/prefswindow.c
		Maemo: Better prefs layout

2007-07-25 [paul]	2.10.0cvs62

	* src/textview.c
		fix the layout on maemo
		thanks to Colin

2007-07-25 [iwkse]	2.10.0cvs61

	* src/summaryview.c
		add 'o' shortcut on summaryview

2007-07-25 [iwkse]	2.10.0cvs60

	* src/textview.c
		fix o shortcut

2007-07-24 [colin]	2.10.0cvs59

	* src/mh.c
		Fix missing timestamp update on source
		folder when moving
	* src/textview.c
	* src/textview.h
		Better text layout on part's choices

2007-07-23 [colin]	2.10.0cvs58

	* src/mimeview.c
	* src/textview.c
		Maemo: Automatically choose the correct application
		to open parts
	* src/gtk/quicksearch.c
		Make search run on GDK_KP_Enter too

2007-07-23 [wwp]	2.10.0cvs57

	* src/quote_fmt_lex.l
		Revert accidentaly committed lines (account_sig) in
		2.10.0cvs56.

2007-07-23 [wwp]	2.10.0cvs56

	* src/quote_fmt_lex.l
		Fix typos around long form expressions in the quote lexer.

2007-07-23 [paul]

	3.0.0-rc1 released

2007-07-23 [colin]	2.10.0cvs55

	* src/addr_compl.c
		Fix auto-completion on Maemo

2007-07-23 [colin]	2.10.0cvs54

	* src/statusbar.c
		Maemo: Fix sticking statusbars

2007-07-22 [colin]	2.10.0cvs53

	* src/main.c
		Maemo: Fix the strange "top_application" info
		at startup. We should do something when 
		receiving such a message.

2007-07-20 [paul]	2.10.0cvs52

	* src/news_gtk.c
		add missing #include "statusbar.h"

2007-07-20 [colin]	2.10.0cvs51
