@@ -2720,3 +2720,4 @@
 ( cvs diff -u -r 1.60.2.92 -r 1.60.2.93 src/addressbook.c;  cvs diff -u -r 1.14.2.28 -r 1.14.2.29 src/editaddress.c;  ) > 2.10.0cvs64.patchset
 ( cvs diff -u -r 1.654.2.2774 -r 1.654.2.2775 configure.ac;  ) > 2.10.0cvs65.patchset
 ( cvs diff -u -r 1.12.2.38 -r 1.12.2.39 src/gtk/prefswindow.c;  ) > 2.10.0cvs66.patchset
+( cvs diff -u -r 1.83.2.113 -r 1.83.2.114 src/mimeview.c;  cvs diff -u -r 1.75.2.43 -r 1.75.2.44 src/matcher.c;  cvs diff -u -r 1.9.2.20 -r 1.9.2.21 src/common/ssl.c;  ) > 2.10.0cvs67.patchset
