@@ -100,7 +100,7 @@ static void *SSL_connect_thread(void *data)
 
 static gint SSL_connect_nb(SSL *ssl)
 {
-#if (defined USE_PTHREAD && defined __GLIBC__ && (__GLIBC__ > 2 || (__GLIBC__ == 2 && __GLIBC_MINOR__ >= 3)))
+#if (defined USE_PTHREAD && ((defined __GLIBC__ && (__GLIBC__ > 2 || (__GLIBC__ == 2 && __GLIBC_MINOR__ >= 3))) || !defined __GLIBC__))
 	thread_data *td = g_new0(thread_data, 1);
 	pthread_t pt;
 	void *res = NULL;
